2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Use Doxygen grouping commands uniformly in Milena.

	* mln/core/image/graph_elt_neighborhood_if.hh,
	* mln/core/image/graph_elt_window_if.hh,
	* mln/core/image/imorph/labeled_image.hh,
	* mln/core/internal/labeled_image_base.hh,
	* mln/core/site_set/p_edges.hh,
	* mln/fun/i2v/array.hh,
	* mln/util/adjacency_matrix.hh,
	* mln/util/array.hh,
	* mln/util/object_id.hh,
	* mln/util/tracked_ptr.hh,
	* mln/value/lut_vec.hh:
	Here.

2012-05-22  Roland Levillain  <roland@lrde.epita.fr>

	* tests/data/transform.cc: Aesthetic changes.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Improve the documentation of mln::util::set.

	* mln/util/set.hh: Here.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Various fixes related to image properties (traits).

	* mln/core/image/vmorph/fun_image.hh,
	* mln/trait/image/props.hh,
	* mln/trait/images.hh:
	Here.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Clean up white space.

	* mln/core/site_set/p_graph_piter.hh,
	* mln/accu/transform_snake.hh:
	Here.

2010-10-19  Roland Levillain  <roland@lrde.epita.fr>

	Typos and aesthetic changes in Milena apps.

	* apps/graph-morpho/make.hh (make::complex1d_image)
	* apps/graph-morpho/convert.hh (convert::to_complex_image)
	Here.

2010-09-20  Roland Levillain  <roland@lrde.epita.fr>

	* mln/canvas/all.hh: Sort #include directives.

2010-08-17  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes.

	* mln/morpho/tree/data.hh,
	* mln/registration/icp.hh,
	* mln/util/fibonacci_heap.hh:
	Wrap long lines, fix punctuation, etc.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	* mln/io/off/save.hh: Fix documentation.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Enforce coding style w.r.t. function declarations.

	* mln/io/magick/load.hh: Here.

2010-04-20  Roland Levillain  <roland@lrde.epita.fr>

	Add Doxygen documentation to a test.

	* tests/topo/complex.cc: Here.
